# gpui-component-demo

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/custom_component/sidebar/: mod.rs
src/models/: accordion_component.rs  alert_component.rs  avatar_component.rs  badge_component.rs  button_component.rs  calendar_component.rs  chart_component.rs  checkbox_component.rs  clipboard_component.rs  collapsible_component.rs  color_picker_component.rs  components.rs  date_picker_component.rs  description_list_component.rs  dialog_component.rs  dropdown_button_component.rs  editor_component.rs  form_component.rs  mod.rs  popover_component.rs  skeleton_component.rs
src/views/: app.rs  component_showcase.rs  main_page.rs  mod.rs  title_bar.rs
