[package]
name = "gpui-component-demo"
version = "0.1.0"
edition = "2024"
authors = ["Leo <jafee201153@gmail.com>"]
description = "A demo application for gpui-component library"
keywords = ["desktop", "gpui", "ui", "component", "demo"]
license = "Apache-2.0"
homepage = "https://github.com/leoliu0605/gpui-component-demo"
repository = "https://github.com/leoliu0605/gpui-component-demo"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
gpui = "0.2.2"
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
strum = "0.27.2"
strum_macros = "0.27.2"
