[package]
name = "gpui-component-sample"
version = "0.1.0"
edition = "2024"
authors = ["Leo <jafee201153@gmail.com>"]
description = "A sample application for gpui-component library"
keywords = ["desktop", "gpui", "ui", "component", "sample"]
license = "Apache-2.0"
homepage = "https://github.com/leoliu0605/gpui-component-sample"
repository = "https://github.com/leoliu0605/gpui-component-sample"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
gpui = "0.2.2"
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
strum = "0.27.2"
strum_macros = "0.27.2"
